<resources>
    <string name="sync_now">Sync</string>
    <string name="not_now">Not Now</string>
    <string name="num_zero">0</string>
    <string name="num_one">1</string>
    <string name="num_two">2</string>
    <string name="num_three">3</string>
    <string name="num_four">4</string>
    <string name="num_five">5</string>
    <string name="num_six">6</string>
    <string name="num_seven">7</string>
    <string name="num_eight">8</string>
    <string name="num_nine">9</string>
    <string name="clear">Clear</string>
    <string name="done">Done</string>
    <string name="next">Next</string>
    <string name="unload_qty">Unload\nQty</string>
    <string name="return_">Good Condition</string>
    <string name="Header_Name">Header Name</string>
    <string name="Sort_By">Sort By</string>
    <string name="Search_Map">Search Map</string>
    <string name="Map_Key">0XtNuaSZd01YG7_5LCSxiasOTBj_iLjlwUfIRdg</string>
    <string name="Map_Key_v2">AIzaSyDmInDHSC66TtIk_UJPq6HSpc84LGFTYKI</string>
    <string name="hello">Hello World, CustomisedPresellerActivity!</string>
    <string name="app_name">Kwality</string>
    <string name="capture_image">Capture Image</string>
    <string name="capture_video">Capture Video</string>
    <string name="record_audio">Record Audio</string>
    <string name="approved">Approved</string>
    <string name="pending">Pending</string>
    <string name="version">Unilever SFA® Version: 01.14.0721.1</string>
    <string name="release_Date">Release Date : 10-August-2017</string>
    <string name="itemCode_decriptin">Item Code &amp; Description</string>
    <string name="date_time_caps">DATE &amp; TIME</string>
    <string name="member">Member</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="username_hint">Username</string>
    <string name="usercode_hint">Usercode</string>
    <string name="Memeber_Login">Memeber Login</string>
    <string name="Password_hint">Password</string>
    <string name="Remember_me">Remember me</string>
    <string name="validating_please_wait">Validating. Please wait ...</string>
    <string name="please_try_again">Please try again.</string>
    <string name="Capturing_please_wait">Capturing location. Please wait ...</string>
    <string name="itemcodenddesc">Item Code &amp; Description</string>
    <string name="log_date_validation_minimum_date">You can\'t select less than 1st day of the month.</string>
    <string name="search_by_customer_code_or_name">Search by CustomerCode/Name</string>
    <string name="OK">OK</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Submit">Submit</string>
    <string name="check_out">Check Out</string>
    <string name="cancel">Cancel</string>
    <string name="Skip">Skip</string>
    <string name="Customer_Code">Customer Code</string>
    <string name="Customer_Discount">Ice Cream Discount</string>
    <string name="Customer_Food_Discount">Food Discount</string>
    <string name="Customer_TPT_Discount">TPT Discount</string>
    <string name="Excess_Payment">Excess Payment</string>
    <string name="Address_Information">Address Information</string>
    <string name="Post_Box_No">Post Box No</string>
    <string name="Address1_Label">Street</string>
    <string name="Address2_Label">Building</string>
    <string name="Street_Building">Street/Building</string>
    <string name="Contact_Person">Contact Person</string>
    <string name="Payment_Type">Payment Type</string>
    <string name="Emirates">Emirates</string>
    <string name="Location">Location</string>
    <string name="City">City</string>
    <string name="Telephone">Telephone</string>
    <string name="Email_ID">Email ID</string>
    <string name="ItemInvoiceNum">Invoice Number</string>
    <string name="Mandatory_documents">Mandatory documents :-</string>
    <string name="Trade_license_copy">Trade license copy</string>
    <string name="Owner_passport_copy">Owner passport copy</string>
    <string name="Month_Bank_statement">3 Month Bank statement</string>
    <string name="Registratio_Form">Registration Form</string>
    <string name="Customer_Name">Customer Name: </string>
    <string name="Fax_No">Fax No</string>
    <string name="View"><u>View</u></string>
    <string name="Site_Code">Site Code</string>
    <string name="Contact_Person_and_phone">Contact Person Mobile Number</string>
    <string name="Credit_Limit">Credit Limit: </string>
    <string name="Geo_Code_X_Lat">Geo Code X </string>
    <string name="Geo_Code_Y_Long">Geo Code Y </string>
    <string name="Print">Print</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="warning">Warning !</string>
    <string name="loading">Loading ...</string>
    <string name="please_wait">Please wait ...</string>
    <string name="No_matching_record_found">No matching record found.</string>
    <string name="enter_password">Please enter password.</string>
    <string name="enter_username_password">Please enter usercode and password.</string>
    <string name="enter_username">Please enter usercode.</string>
    <string name="Payment_Confirm">  Payment Confirm  </string>
    <string name="Discount_in_percentage">Discount (in %)</string>
    <string name="Total_value">Invoice Amount</string>
    <string name="Delivery_Date_">Delivery Date: </string>
    <string name="Empty_Jar_value">EmptyJar value (AED):</string>
    <string name="Order_value">Order Value</string>
    <string name="VAt_value">VAT Value: </string>
    <string name="NET_value">NET Value</string>
    <string name="Total_Qty">Total Qty</string>
    <string name="Today_Date">Today\'s Date: </string>
    <string name="Price">Price</string>
    <string name="AddItem">Add Item</string>
    <string name="Finalize"> &#032;&#032;Finalize&#032;&#032;</string>
    <string name="Capture_Inventory">Capture Order</string>
    <string name="free_delivery">Free Delivery</string>
    <string name="No_previous_order">Please add items</string>
    <string name="itemcode">Item Code &amp; Description</string>
    <string name="Cases">Cases</string>
    <string name="Gate_Pass_QTY">Gatepass (Cases)</string>
    <string name="Gate_Pass_QTY_p">Gatepass (Units)</string>
    <string name="check_in_demand">Check in Demand</string>
    <string name="Units">Units</string>
    <string name="Empty_Jar">E.Jar</string>
    <string name="Add_New_SKU_Item">Add Items</string>
    <string name="Select_WareHouse">Select Warehouse</string>
    <string name="Item_Desc">Item Desc</string>
    <string name="Category">Category</string>
    <string name="Search">Search</string>
    <string name="Item_Code">Item Code</string>
    <string name="Item_Description">Item Description</string>
    <string name="No_item_found">No items found.</string>
    <string name="Add">Add</string>
    <string name="Preview_Order">Preview Order</string>
    <string name="Invoice_Preview">Invoice Preview</string>
    <string name="Sales_Qty">Sales Qty</string>
    <string name="Returns_Qty">Returns Qty</string>
    <string name="Damaged_Qty">Damaged Qty</string>
    <string name="Exchanges_Qty">Exchanges Qty</string>
    <string name="Free_Items_Qty">Free Items Qty</string>
    <string name="Return_Free_Items">Return Free Items</string>
    <string name="PO_CRM_Order">PO / CRM Order</string>
    <string name="Remarks">Remarks</string>
    <string name="ReturnReason1">Salable</string>
    <string name="ReturnReason2">Salable outlet closer</string>
    <string name="ReturnReason3">Non salable</string>
    <string name="ReturnReason4">Non salable outlet closer</string>
    <string name="Confirm_Order">Confirm Order</string>
    <string name="Confirm_sales_Order">Confirm Sales Order</string>
    <string name="Customer_Statement">Customer Statement</string>
    <string name="Save_as_Draft"> Save as Draft </string>
    <string name="Discount_if_any_inpercentage">Discount if any (%)</string>
    <string name="Print_Customer_Copy">Customer Copy </string>
    <string name="Print_Merchant_Copy">Merchant Copy </string>
    <string name="Print_Merchant">Merchant Copy</string>
    <string name="Print_Customer">Customer Copy</string>
    <string name="Customer_History">Customer History</string>
    <string name="Next">Next</string>
    <string name="Tasks">Tasks</string>
    <string name="capturecomactivites">Capture Competitor \nActivities</string>
    <string name="initiativesexecution">Initiatives Execution</string>
    <string name="Surveyexecution">Survey Execution</string>
    <string name="Continue">&#032;Continue&#032;</string>
    <string name="Total_Amt">Total Amt</string>
    <string name="Total_Amount">Total Amount</string>
    <string name="alseer_title">Kwality</string>
    <string name="alseer_address">Pure Ice Cream Co. LLC.\nPo Box 6172, Sharjah,\nUnited Arab Emirates.\nPhone : (971)(6)5332153\nFax   : (971)(6)5339707\nEmail  :	pureices@emirates.net.ae </string>
    <string name="Discount">Discount</string>
    <string name="Customer_Signature">Customer Signature</string>
    <string name="Preseller_Signature">Salesman Signature</string>
    <string name="Total">Total</string>
    <string name="Customer_Passcode">Customer Passcode:</string>
    <string name="Delivery_Date">Delivery Date:</string>
    <string name="Delivery_Time">Delivery Time:</string>
    <string name="Delivery_Window">Delivery Window:</string>
    <string name="Signature">Signature :</string>
    <string name="Clear">Clear</string>
    <string name="validating_your_credit_limit">Validating your credit limit ...</string>
    <string name="please_wait_order_pushing">Please wait, while your order is pushing to server...</string>
    <string name="please_wait_order_saving">Please wait, while your order is saving...</string>
    <string name="exceeded_your_credit_limit_tele_order">You exceeded your credit limit.</string>
    <string name="Order_pushed_to_server_successfully">Order pushed to server successfully.</string>
    <string name="msg_default_time">Time</string>
    <string name="Cashier"> Cashier</string>
    <string name="Asset_Location">Asset Location :</string>
    <string name="Freezer"> Freezer</string>
    <string name="Asset_Type">Asset Type :</string>
    <string name="Quantity">QTY</string>
    <string name="Product_Quantity">Product Quantity</string>
    <string name="Submit2">  Submit  </string>
    <string name="alseer_title_ar">كلداري إخوان C.L.L.</string>
    <string name="alseer_address_ar">منطقة القوز الصناعية الأولى,,\n138, دبي، الإمارات العربية المتحدة\nالاتصال على: +971 4-338-8800\nفاكس: +971 4-338-1918</string>
    <string name="item_desc_ar">البنود والتفاصيل</string>
    <string name="qty_ar">االكمية</string>
    <string name="disc_ar">القرص</string>
    <string name="price_ar">السعر</string>
    <string name="total_price_ar">السعر الإجمالي</string>
    <string name="invoice_price_ar">فاتورة الأسعار</string>
    <string name="seacrch_customer">  Search by Customer Name/ Customer Code</string>
    <string name="journey_plan_on">My Journey Plan on</string>
    <string name="time">Time</string>
    <string name="customers">Customers</string>
    <string name="title_bluetooth">Bluetooth interface</string>
    <string name="button_connect">Connect</string>
    <string name="button_status">Printer Status</string>
    <string name="button_print">Print</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="label_address">Address:</string>
    <string name="hint_address_bluetooth">Bluetooth Address</string>
</resources>