<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/tvSelectedItemListHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:layout_weight="1"
            android:orientation="vertical"
            android:singleLine="true"
            android:text="@string/Product_Quantity"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/text_size_extra_large"
            android:textStyle="bold" >
        </TextView>

        <Button
            android:id="@+id/btnSubmited"
            style="@style/Btn_Green_wrap"
            android:layout_margin="@dimen/size10"
            android:text="@string/Submit2" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dot_divider" />

    <TextView
        android:id="@+id/tvNoproductfound"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/No_item_found"
        android:textColor="@color/gray_dark"
        android:textSize="@dimen/size17"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvNoOrderFound"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingLeft="10dip"
        android:text="@string/No_item_found"
        android:textColor="@color/gray_light"
        android:textSize="@dimen/size20"
        android:visibility="gone" />

    <ListView
        android:id="@+id/lvAssetscanList"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:fadingEdge="none"
        android:scrollbars="none" >
    </ListView>

</LinearLayout>