<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_light"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/size10"
        android:paddingLeft="@dimen/size10"
        android:paddingRight="@dimen/size10"
        android:paddingTop="@dimen/size20" >

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/search_edt"
            android:drawableLeft="@drawable/search_icon_2"
            android:hint="@string/seacrch_customer"
            android:paddingBottom="@dimen/size10"
            android:paddingLeft="@dimen/size5"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/size20"
        android:paddingTop="@dimen/size20" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/journey_plan_on"
            android:textColor="@color/green_dark"
            android:textSize="@dimen/text_size_large" />

        <TextView
            android:id="@+id/tvJourneyPlanDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text=" Feb 25th, 2014"
            android:textColor="@color/green_dark"
            android:textSize="@dimen/text_size_large" />
    </LinearLayout>

    <LinearLayout
        style="@style/Layout_Top_GreenBar" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size30"
            android:paddingBottom="@dimen/size10"
            android:paddingTop="@dimen/size10"
            android:src="@drawable/clock_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size5"
            android:layout_weight="0.3"
            android:paddingBottom="@dimen/size10"
            android:paddingTop="@dimen/size10"
            android:text="@string/time"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:gravity="center"
            android:paddingBottom="@dimen/size10"
            android:paddingTop="@dimen/size10"
            android:text="@string/customers"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal" />
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:divider="@drawable/lv_divider_long" >
    </ListView>

</LinearLayout>