<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|right" >

        <Button
            android:id="@+id/btnAssetscanSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            android:background="@drawable/btn_submit"
            android:text="Submit"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnAssetscanCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            android:background="@drawable/btn_submit"
            android:text="Cancel"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dot_divider" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/ivScanCode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size20"
                android:src="@drawable/scan1" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size20" >

                <TextView
                    android:id="@+id/tvTypeBold"
                    android:layout_width="@dimen/size110"
                    android:layout_height="wrap_content"
                    android:text="@string/Asset_Type"
                    android:textColor="@color/gray_dark"
                    android:textSize="@dimen/text_size_normal"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Freezer"
                    android:textColor="@color/gray_dark"
                    android:textSize="@dimen/text_size_normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size20"
                android:layout_marginTop="@dimen/size10" >

                <TextView
                    android:id="@+id/tvLocationBold"
                    android:layout_width="@dimen/size110"
                    android:layout_height="wrap_content"
                    android:text="@string/Asset_Location"
                    android:textColor="@color/gray_dark"
                    android:textSize="@dimen/text_size_normal"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Cashier"
                    android:textColor="@color/gray_dark"
                    android:textSize="@dimen/text_size_normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size20"
                android:layout_marginTop="@dimen/size10" >

                <TextView
                    android:id="@+id/tvTimeBold"
                    android:layout_width="@dimen/size110"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_default_time"
                    android:textColor="@color/gray_dark"
                    android:textSize="@dimen/text_size_normal"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Cashier"
                    android:textColor="@color/gray_dark"
                    android:textSize="@dimen/text_size_normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size20"
                android:layout_marginTop="@dimen/size10" >

                <TextView
                    android:id="@+id/tvQuantityTitle"
                    android:layout_width="@dimen/size110"
                    android:layout_height="wrap_content"
                    android:text="@string/Quantity"
                    android:textColor="@color/gray_dark"
                    android:textSize="@dimen/text_size_normal"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etQuantity"
                    android:layout_width="@dimen/size40"
                    android:layout_height="@dimen/size30"
                    android:layout_marginLeft="@dimen/size10"
                    android:background="@drawable/unit_bg"
                    android:gravity="center"
                    android:hint="0"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:textColor="@color/gray_dark"
                    android:textSize="@dimen/text_size_normal" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvComments"
                android:layout_width="@dimen/size100"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size20"
                android:layout_marginTop="@dimen/size10"
                android:text="Comments"
                android:textColor="@color/gray_dark"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtAssetscanComments"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size10"
                android:layout_marginLeft="@dimen/size20"
                android:layout_marginRight="@dimen/size20"
                android:layout_marginTop="@dimen/size10"
                android:background="@drawable/message_bg"
                android:padding="@dimen/size10"
                android:textColor="@color/gray_dark"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>